[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Button/buttonHighLight.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Button/buttonPressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Button/buttonNormal.png" type="Texture" id=3]
[ext_resource path="res://Assets/PixelRPG.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/PauseMenu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=2]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/path = NodePath("fade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.560784 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fade:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="PauseMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.264877
margin_top = -0.26487
margin_right = 0.264893
margin_bottom = -0.264862
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseBar" type="ColorRect" parent="."]
margin_left = 133.0
margin_top = 40.0
margin_right = 200.0
margin_bottom = 140.0
color = Color( 0, 0, 0, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseBar"]
margin_left = 9.68901
margin_top = 9.57662
margin_right = 59.689
margin_bottom = 15.5766
custom_fonts/font = SubResource( 1 )
text = "Pause Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeGame" type="TextureButton" parent="."]
margin_left = 142.947
margin_top = 79.6789
margin_right = 620.947
margin_bottom = 220.679
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="ResumeGame"]
margin_left = 116.0
margin_top = 52.0
margin_right = 166.0
margin_bottom = 58.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "Resume Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGame" type="TextureButton" parent="."]
margin_left = 143.134
margin_top = 95.7857
margin_right = 621.134
margin_bottom = 236.786
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="LoadGame"]
margin_left = 141.746
margin_top = 53.6187
margin_right = 182.746
margin_bottom = 68.6187
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "Load Game
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="."]
margin_left = 143.232
margin_top = 110.887
margin_right = 621.232
margin_bottom = 251.887
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 1 )

[node name="Label" type="Label" parent="MainMenu"]
margin_left = 141.746
margin_top = 57.3644
margin_right = 182.746
margin_bottom = 72.3644
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "Main Menu
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )

[node name="fade" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ResumeGame" to="." method="_on_ResumeGame_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
